[P|bilinear-forms] add intersection

--- a/python/dune/gdt/CMakeLists.txt
+++ b/python/dune/gdt/CMakeLists.txt
@@ -19,8 +19,12 @@ dune_pybindxi_add_module(_functionals_interfaces_common EXCLUDE_FROM_ALL ${heade
 dune_pybindxi_add_module(_functionals_interfaces_eigen EXCLUDE_FROM_ALL ${header} functionals/interfaces_eigen.cc)
 dune_pybindxi_add_module(_functionals_interfaces_istl EXCLUDE_FROM_ALL ${header} functionals/interfaces_istl.cc)
 dune_pybindxi_add_module(_functionals_vector_based EXCLUDE_FROM_ALL ${header} functionals/vector-based.cc)
+dune_pybindxi_add_module(_local_bilinear_forms_coupling_intersection_integrals EXCLUDE_FROM_ALL ${header} local/bilinear-forms/coupling_intersection_integrals.cc)
+dune_pybindxi_add_module(_local_bilinear_forms_coupling_intersection_interface EXCLUDE_FROM_ALL ${header} local/bilinear-forms/coupling_intersection_interface.cc)
 dune_pybindxi_add_module(_local_bilinear_forms_element_integrals EXCLUDE_FROM_ALL ${header} local/bilinear-forms/element_integrals.cc)
 dune_pybindxi_add_module(_local_bilinear_forms_element_interface EXCLUDE_FROM_ALL ${header} local/bilinear-forms/element_interface.cc)
+dune_pybindxi_add_module(_local_bilinear_forms_intersection_integrals EXCLUDE_FROM_ALL ${header} local/bilinear-forms/intersection_integrals.cc)
+dune_pybindxi_add_module(_local_bilinear_forms_intersection_interface EXCLUDE_FROM_ALL ${header} local/bilinear-forms/intersection_interface.cc)
 dune_pybindxi_add_module(_local_functionals_element_integrals EXCLUDE_FROM_ALL ${header} local/functionals/element_integrals.cc)
 dune_pybindxi_add_module(_local_functionals_element_interface EXCLUDE_FROM_ALL ${header} local/functionals/element_interface.cc)
 dune_pybindxi_add_module(_local_functionals_intersection_integrals EXCLUDE_FROM_ALL ${header} local/functionals/intersection_integrals.cc)
