--- a/python/dune/gdt/CMakeLists.txt
+++ b/python/dune/gdt/CMakeLists.txt
@@ -42,6 +42,9 @@ dune_pybindxi_add_module(_local_integrands_laplace EXCLUDE_FROM_ALL ${header} lo
 dune_pybindxi_add_module(_local_integrands_laplace_ipdg_dirichlet_coupling EXCLUDE_FROM_ALL ${header} local/integrands/laplace_ipdg_dirichlet_coupling.cc)
 dune_pybindxi_add_module(_local_integrands_laplace_ipdg_inner_coupling EXCLUDE_FROM_ALL ${header} local/integrands/laplace_ipdg_inner_coupling.cc)
 dune_pybindxi_add_module(_local_integrands_linear_advection EXCLUDE_FROM_ALL ${header} local/integrands/linear_advection.cc)
+dune_pybindxi_add_module(_local_integrands_linear_advection_upwind_dirichlet_coupling EXCLUDE_FROM_ALL ${header} local/integrands/linear_advection_upwind_dirichlet_coupling.cc)
+dune_pybindxi_add_module(_local_integrands_linear_advection_upwind_inner_coupling EXCLUDE_FROM_ALL ${header} local/integrands/linear_advection_upwind_inner_coupling.cc)
+dune_pybindxi_add_module(_local_integrands_linear_advection_upwind_volume EXCLUDE_FROM_ALL ${header} local/integrands/linear_advection_upwind_volume.cc)
 dune_pybindxi_add_module(_local_integrands_quaternary_intersection_interface EXCLUDE_FROM_ALL ${header} local/integrands/quaternary_intersection_interface.cc)
 dune_pybindxi_add_module(_local_integrands_unary_element_interface EXCLUDE_FROM_ALL ${header} local/integrands/unary_element_interface.cc)
 dune_pybindxi_add_module(_local_integrands_unary_intersection_interface EXCLUDE_FROM_ALL ${header} local/integrands/unary_intersection_interface.cc)
