[P] make some dependencies optional

--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -23,5 +23,6 @@ setup(name='dune.gdt',
       author_email='dune-gdt-dev@listserv.uni-muenster.de',
       url='https://github.com/dune-community/dune-gdt',
       packages=['dune.gdt'],
-      install_requires=['jinja2', 'where', 'codecov', 'bokeh', 'pymumps', 'metis'],
+      install_requires=['jinja2', 'where', 'codecov'],
+      extrast_requires={'parallel': ['bokeh', 'pymumps', 'metis']},
       )
