--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -42,3 +42,13 @@ endforeach(source ${example_sources})
 
 add_custom_target(examples)
 add_dependencies(examples ${examples_targets})
+
+dune_library_add_sources("boltzmann" SOURCES boltzmann-bindings.cc)
+dune_library_add_sources("coordinatetransformedmn" SOURCES coordinate-transformed-mn-bindings.cc)
+dune_library_add_sources("cellmodel"
+                         SOURCES
+                         cellmodel-bindings.cc
+                         ../dune/gdt/test/cellmodel/cellmodel.cc
+                         ../dune/gdt/test/cellmodel/linearsolvers.cc
+                         ../dune/gdt/test/cellmodel/linear-solver-types.cc)
+dune_library_add_sources("vectors" SOURCES xt-vector-bindings.cc)
