--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,21 @@ else()
   dune_enable_all_packages(INCLUDE_DIRS ${dune-gdt_SOURCE_DIR}/dune ${Python3_INCLUDE_DIRS} MODULE_LIBRARIES dunegdt boltzmann coordinatetransformedmn cellmodel vectors)
 endif()
 
+dune_add_library(boltzmann SOURCES examples/boltzmann-bindings.cc)
+dune_add_library(coordinatetransformedmn SOURCES examples/coordinate-transformed-mn-bindings.cc)
+dune_add_library(cellmodel
+                 SOURCES
+                 examples/cellmodel-bindings.cc
+                 dune/gdt/test/cellmodel/cellmodel.cc
+                 dune/gdt/test/cellmodel/linearsolvers.cc
+                 dune/gdt/test/cellmodel/linear-solver-types.cc)
+dune_add_library(vectors SOURCES examples/xt-vector-bindings.cc)
+add_custom_target(hapod_bindings
+                  DEPENDS boltzmann
+                          coordinatetransformedmn
+                          cellmodel
+                          vectors)
+
 add_header_listing()
 make_dependent_modules_sys_included()
 if(EIGEN3_FOUND)
