Iterative solver for stokes

--- a/examples/activepolargels.ini
+++ b/examples/activepolargels.ini
@@ -1,12 +1,12 @@
 [grid]
-NX=90
-NY=90
+NX=180
+NY=180
 
 [fem]
 degree=2
 torder=1
-t_end=1
-dt=5e-3
+t_end=0.02
+dt=1e-3
 superintegration_order=0
 
 [problem]
@@ -24,5 +24,5 @@ Fa=-1
 
 [output]
 filename=cpp
-write_step=1e-2
+write_step=0.1
 subsampling=false
