add first experiment

--- a/examples/activepolargels.ini
+++ b/examples/activepolargels.ini
@@ -1,16 +1,16 @@
 [grid]
-NX=240
-NY=240
+NX=200
+NY=200
 
 [fem]
 degree=2
 torder=1
-t_end=0.02
+t_end=10
 dt=1e-3
 superintegration_order=2
 
 [problem]
-testcase=single_cell
+testcase=cell_isolation_experiment
 epsilon=0.21
 gamma=0.025
 kappa=1
@@ -23,6 +23,6 @@ Pa=1
 Fa=-1
 
 [output]
-filename=cpp
-write_step=0.1
-subsampling=false
+prefix=cpp
+write_step=0.01
+subsampling=true
