Revert "[P] fix typo"
This reverts commit acdaac84af13abac614841b3f11f84baa50c2dfc.

--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -45,6 +45,5 @@ setup(name='dune.gdt',
           'install': InstallPlatlib,
       },
       install_requires=['jinja2', 'where', 'codecov'],
-      extras_requires={'parallel': ['bokeh', 'pymumps', 'metis']},
-      distclass=BinaryDistribution,
+      extrast_requires={'parallel': ['bokeh', 'pymumps', 'metis']},
       )
