--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -13,7 +13,23 @@
 # ~~~
 
 import sys
-from setuptools import setup
+from setuptools import setup, find_packages
+from setuptools.dist import Distribution
+from setuptools.command.install import install
+
+class BinaryDistribution(Distribution):
+    """Distribution which always forces a binary package with platform name"""
+    def is_pure(self):
+        return False
+    def has_ext_modules(self):
+        return True
+
+
+class InstallPlatlib(install):
+    def finalize_options(self):
+        install.finalize_options(self)
+        self.install_lib = self.install_platlib
+
 
 setup(name='dune.gdt',
       version='0.3-dev',
@@ -22,7 +38,13 @@ setup(name='dune.gdt',
       author='The dune-gdt devs',
       author_email='dune-gdt-dev@listserv.uni-muenster.de',
       url='https://github.com/dune-community/dune-gdt',
-      packages=['dune.gdt'],
+      packages = find_packages(),
+      package_data = {'': ['*.so']},
+      include_package_data=True,
+      cmdclass={
+          'install': InstallPlatlib,
+      },
+      distclass=BinaryDistribution,
       install_requires=['jinja2', 'where', 'codecov'],
       extras_requires={'parallel': ['bokeh', 'pymumps', 'metis']},
       )
