[py] fix project name

--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -31,7 +31,7 @@ class InstallPlatlib(install):
         self.install_lib = self.install_platlib
 
 
-setup(name='dune.gdt',
+setup(name='dune-gdt',
       version='0.3-dev',
       namespace_packages=['dune'],
       description='Python for Dune-Gdt',
