--- a/examples/activepolargels.ini
+++ b/examples/activepolargels.ini
@@ -1,6 +1,6 @@
 [grid]
-NX=200
-NY=200
+NX=60
+NY=60
 
 [fem]
 degree=2
@@ -10,7 +10,7 @@ dt=1e-3
 superintegration_order=2
 
 [problem]
-testcase=cell_isolation_experiment
+testcase=single_cell
 epsilon=0.21
 gamma=0.025
 kappa=1
@@ -25,4 +25,4 @@ Fa=-1
 [output]
 prefix=cpp
 write_step=0.01
-subsampling=true
+subsampling=false
