Remove mailing list references

--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -36,7 +36,7 @@ setup(name='dune.gdt',
       namespace_packages=['dune'],
       description='Python for Dune-Gdt',
       author='The dune-gdt devs',
-      author_email='dune-gdt-dev@listserv.uni-muenster.de',
+      author_email='felix.schindler@wwu.de',
       url='https://github.com/dune-community/dune-gdt',
       packages = find_packages(),
       package_data = {'': ['*.so']},
