--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -1,12 +1,12 @@
 # ~~~
-# This file is part of the dune-xt-common project:
-#   https://github.com/dune-community/dune-xt-common
-# Copyright 2009-2018 dune-xt-common developers and contributors. All rights reserved.
+# This file is part of the dune-gdt project:
+#   https://zivgitlab.uni-muenster.de/ag-ohlberger/dune-community/dune-gdt
+# Copyright 2010-2021 dune-gdt developers and contributors. All rights reserved.
 # License: Dual licensed as BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)
 #      or  GPL-2.0+ (http://opensource.org/licenses/gpl-license)
 #          with "runtime exception" (http://www.dune-project.org/license.html)
 # Authors:
-#   Rene Fritze (2018)
+#   Rene Fritze (2019)
 # ~~~
 
 [aliases]
@@ -36,7 +36,7 @@ python_files = test/*.py
 python_class = Test
 pep8maxlinelength = 120
 pep8ignore = E221,E226,E241,E242
-addopts= -p no:warnings 
+addopts= -p no:warnings
 
 [metadata]
 # this is mandatory to lave license end up in .whl
