--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -37,7 +37,7 @@ setup(name='dune.gdt',
       description='Python for Dune-Gdt',
       author='The dune-gdt devs',
       author_email='felix.schindler@wwu.de',
-      url='https://github.com/dune-community/dune-gdt',
+      url='https://zivgitlab.uni-muenster.de/ag-ohlberger/dune-community/dune-gdt',
       packages = find_packages(),
       package_data = {'': ['*.so']},
       include_package_data=True,
