[cmake] load module version from git

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,10 @@ add_subdirectory(${dune-xt_MODULE_PATH}/../../pybind11 ${CMAKE_CURRENT_BINARY_DI
 
 # start a dune project with information from dune.module
 dune_project()
+
+include(DuneXtVersionHelper)
+dune_xt_module_version_from_git(dune-gdt)
+
 if(DUNE_XT_WITH_PYTHON_BINDINGS)
   dune_enable_all_packages(INCLUDE_DIRS ${dune-gdt_SOURCE_DIR}/dune ${Python3_INCLUDE_DIRS} MODULE_LIBRARIES dunegdt)
 else()
