Avoid amm-only runners because they are currently not available

--- a/.ci/gitlab/config.yml
+++ b/.ci/gitlab/config.yml
@@ -242,7 +242,7 @@ clang_full python:
     variables:
         CI_IMAGE: debian_clang_full
     tags:
-        - amm-only
+        - lucas
     stage: python
     needs: ["debian_clang_full"]
     script:
