[P] hardcode dune-xt==2021.1.12 to the last working pypi version

--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -19,7 +19,7 @@ from setuptools.command.install import install
 
 extras_require = {
   'parallel': ('bokeh', 'pymumps', 'metis'),
-  'visualisation': ('dune-xt[visualisation]>=${dune-xt_VERSION}',)
+  'visualisation': ('dune-xt[visualisation]==2021.1.12',)
 }
 
 extras_require['all'] = [p for plist in extras_require.values() for p in plist]
@@ -52,6 +52,6 @@ setup(name='dune-gdt',
           'install': InstallPlatlib,
       },
       distclass=BinaryDistribution,
-      install_requires=['dune-xt~=${dune-xt_VERSION_MAJOR}.${dune-xt_VERSION_MINOR}'],
+      install_requires=['dune-xt==2021.1.12'],
       extras_require=extras_require,
       )
